style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
html,
body {
  width: 100%;
  height: 100%;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #222;
  color: #fff;
  font-family: Arial, sans-serif;
}
#game-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}
#video-player {
  width: 100%;
  height: 100%;
  background-color: #000; /* Placeholder for video */
  pointer-events: none; /* Disable mouse events on video */
}
/* Floating menu styles */
#floating-menu {
  position: absolute;
  top: 20px;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  background-color: rgba(0, 0, 0, 0.8);
  padding: 10px 20px;
  border-radius: 8px;
}
/* game HUD style */
#game-hud, #battle-end-hud, #playback-record-hud, #record-hud {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  display: none;
  gap: 20px;
  background-color: rgba(0, 0, 0, 0.0);
  padding: 10px 20px;
  border-radius: 8px;
}

#battle-end-hud {
  justify-content: center;
  align-items: center;
}

#playback-record-hud {
  align-items: center;
  flex-direction: row-reverse;
}


#game-hud {
  flex-direction: column;
  align-items: center;
}

input {
  width: 300px;
  padding: 5px;
  border: none;
  border-radius: 4px;
  font-size: 1em;
}
button {
  padding: 5px 10px;
  font-size: 2em;
  cursor: pointer;
  border: none;
  border-radius: 4px;
  background-color: #28a745;
  color: #fff;
}
#record-button:hover {
  background-color: #218838;
}

/* Fading alerts */
.fading-alert {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    padding: 10px 20px;
    background-color: rgba(0, 0, 0, 0.8);
    border-radius: 8px;
    z-index: 1000;
    opacity: 100%;
}

